Remove ref to unused part

--- a/dj/volunteers/templates/episode_review.html
+++ b/dj/volunteers/templates/episode_review.html
@@ -71,8 +71,7 @@
   </table>
 
   <p>If after clicking "I Don't See the Right Video Files" you are still unable
-     to find the files that match this talk, or the files are unuseable, skip
-     to <a href="#step-2">Step 2</a> and choose "This Episode is Borked".
+     to find the files that match this talk, or the files are unuseable, choose "This Episode is Borked".
   </p>
 
   <br />
