Landing page, The Backstory begins, now with html.

--- a/dj/main/templates/approve/edit.html
+++ b/dj/main/templates/approve/edit.html
@@ -8,15 +8,20 @@ or much more if you allow your perfectionism to get the best of you.</p>
 <p><strong>Follow this link to do the work: <a href="{% url guest_episode_review show_slug=episode.show.slug episode_slug=episode.slug edit_key=episode.edit_key %}">{{episode.name}}</a></strong></p>
 
 <p> Backstory: The recording gear starts in the morning and ends at the end of the day.  This ensures no one misses the start of a talk, or stops too soon.  The director (the person running the gear) will start a new video file any time it seems there will be a transition between good content (like a talk) and dead air (like people walking around finding a seat.)  It is hard to get right all the time, so often they will cut too soon, and then cut again 30 seconds latter.  
-
+</p>
+<p>
 All of these files get loaded onto a file server and low bandwidth preview videos are made. (think of them like a photo prof sheet.)  The conference schedule data is loaded into a database along with the start and end times of all the video clips, and a fairly simple query associates video clips with talks.  
-
+</p>
+<p>
 The real world does not always follow the data in the conference schedule (talks run late, or get completely replaced) so someone (you) needs to look at the clips and pick out the ones that should be used to produce the final video that will be published.
-
+</p>
+<p>
 If you are lucky, the producer wrote down the start and end time of the talk. If they did, and you have that paper (or the scanned image) you can generally rely on it and not even view the previews.
-
-If it isn't clear, then you will need to watch the previews to determine when the talk starts and ends.  
-
+</p>
+<p>
+If it isn't clear, then you will need to watch the previews to determine when the talk starts and ends.  If they missed cutting at where you think the stalk should start, you can key in the time you think is good.  Same with the end. 
+</p>
+<p>
 The above link takes you to a page where you can do this, and instructions on how.
 
 <p>BTW, allowing the presenter to work on their talk is a new feature.
