--- a/dj/main/templates/approve/edit.html
+++ b/dj/main/templates/approve/edit.html
@@ -3,14 +3,19 @@
 
 {% block point %}
 
-<p>This talk needs a human to do a little work, likely under 5-10 minutes. 
-or much more if you allow your perfectionism to get the best of you.</p>
-<p><strong>Follow this link to do the work: <a href="{% url guest_episode_review show_slug=episode.show.slug episode_slug=episode.slug edit_key=episode.edit_key %}">{{episode.name}}</a></strong></p>
+<p>Hi!</p>
+<p>You have landed here because someone thinks you would like to help out a little.  Working with videos is often daunting, but this is different.</p>
 
-<p> Backstory: The recording gear starts in the morning and ends at the end of the day.  This ensures no one misses the start of a talk, or stops too soon.  The director (the person running the gear) will start a new video file any time it seems there will be a transition between good content (like a talk) and dead air (like people walking around finding a seat.)  It is hard to get right all the time, so often they will cut too soon, and then cut again 30 seconds latter.  
+<p><strong>Follow this link to do the remaining work: <a href="{% url guest_episode_review show_slug=episode.show.slug episode_slug=episode.slug edit_key=episode.edit_key %}">{{episode.name}}</a></strong></p>
+
+<p>
+The time consuming part has been done during the event, now someone needs to decide when the talk really started because it is never exactly the scheduled start time.   This should make sense when you preview the raw recordings. 
+</p>
+
+<p> Backstory: The recording starts in the morning and ends at the end of the day.  This ensures no one misses the start of a talk, or stops too soon.  The director (the person running the gear) will start a new video file any time it seems there will be a transition between good content (like a talk) and dead air (like people walking around finding a seat.)  It is hard to get right all the time, so often they will cut too soon, and then cut again 30 seconds latter.  
 </p>
 <p>
-All of these files get loaded onto a file server and low bandwidth preview videos are made. (think of them like a photo prof sheet.)  The conference schedule data is loaded into a database along with the start and end times of all the video clips, and a fairly simple query associates video clips with talks.  
+All of these files get loaded onto a file server and low quality preview videos are made. (think of them like a photo proof sheet.)  The conference schedule data is loaded into a database along with the start and end times of all the video clips, and a fairly simple query associates video clips with talks.  
 </p>
 <p>
 The real world does not always follow the data in the conference schedule (talks run late, or get completely replaced) so someone (you) needs to look at the clips and pick out the ones that should be used to produce the final video that will be published.
@@ -19,15 +24,11 @@ The real world does not always follow the data in the conference schedule (talks
 If you are lucky, the producer wrote down the start and end time of the talk. If they did, and you have that paper (or the scanned image) you can generally rely on it and not even view the previews.
 </p>
 <p>
-If it isn't clear, then you will need to watch the previews to determine when the talk starts and ends.  If they missed cutting at where you think the stalk should start, you can key in the time you think is good.  Same with the end. 
+If it isn't clear, then you will need to watch the previews to determine when the talk starts and ends.  If the director missed cutting at where you think the stalk should start, you can key in the time you think is good.  Same with the end. 
 </p>
+<p>Once you have saved the start/end data entry, the system will take care of the rest: title slide, encode all the segments into one video, up load it somewhere, maybe even send some email and tweet about it.</p>   
 <p>
 The above link takes you to a page where you can do this, and instructions on how.
-
-<p>BTW, allowing the presenter to work on their talk is a new feature.
-Use your good judgement and tell the list about problems, 
-or open an issue at 
-<a href="https://github.com/CarlFK/veyepar/issues">https://github.com/CarlFK/veyepar/issues</a>
 </p>
 
 {% endblock %}
