--- a/dj/volunteers/templates/episode_review.html
+++ b/dj/volunteers/templates/episode_review.html
@@ -71,7 +71,7 @@ set the Action to "Encode" and hit "Submit" at the bottom of this page.
   <br />
   <p>Choose <strong>"Ready to Encode"</strong> if
      you have selected all the video files you need.<br />
-     Choose "This Episode is Borked" if there are issues with the video files that can't be fixed and this talk should not be published.
+     Choose "This Episode is Borked" if there are issues with the video files that can't be fixed and this talk should not be published.</br>
      Leave it as "Save and Keep Editing" if you have done all you can and need someone else to help.  
      Use Comments to describe any problems, like "None of these clips show this talk." or "The audio is very low." 
   </p>
