clean up jquery ajex

--- a/dj/main/templates/base.html
+++ b/dj/main/templates/base.html
@@ -5,9 +5,12 @@
 <meta charset="utf-8" />
 
 <script type="text/javascript" src="{{STATIC_URL}}admin/js/urlify.js"></script>
+
 <script type="text/javascript" src="{{ STATIC_URL }}js/jquery-ui/jquery-1.7.2.js"></script>
 <script type="text/javascript" src="{{ STATIC_URL }}js/jquery-ui/ui/jquery-ui-1.8.22.custom.js"></script>
-<script type="text/javascript" src="{{ STATIC_URL }}js/jquery-ui-timepicker-addon.js"></script>
+
+<script type="text/javascript" src="http://researchcompendia.org/static/js/jquery.cookie.js"></script>
+
 <script type="text/javascript" src="{{STATIC_URL}}js/login_form.js"></script>
 <script type="text/javascript" src="{{STATIC_URL}}js/fnitize.js"></script>
 
