Add default title tag.

--- a/dj/main/templates/base.html
+++ b/dj/main/templates/base.html
@@ -13,7 +13,7 @@
 <script type="text/javascript" src="{{STATIC_URL}}js/login_form.js"></script>
 <script type="text/javascript" src="{{STATIC_URL}}js/fnitize.js"></script>
 
-{% block head %}{% endblock %}
+{% block head %}<title>Veyepar: Video eyeball produce and review.</title>{% endblock %}
 
 <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}admin/css/base.css">
 <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}css/login_form.css">
