--- a/dj/main/templates/show.html
+++ b/dj/main/templates/show.html
@@ -6,36 +6,18 @@
 {% endblock %}
 
 {% block content %}
-
 <table class="shortcuts">
-<tr><td><a href="{% url overlaping_episodes show.id %}">overlaping_episodes</a></td></tr>
-<tr><td><a href="{% url overlaping_files show.id %}">overlaping_fles</a></td></tr>
-<tr><td><a href="{% url orphan_dv show.id %}">orphan_dv</a></td></tr>
-<tr><td><a href="{% url schedule show.id show.slug %}">schedule</a></td></tr>
-<tr><td><a href="{% url pdfs 'recording_sheets' show.id %}{{show.slug}}_recording_sheets.pdf">recording_sheets.pdf</a></td></tr>
-<tr><td><a href="{% url pdfs 'release_agreements' show.id %}{{show.slug}}_release.pdf">release.pdf</a></td></tr>
-<tr><td><a href="{% url pdfs 'talk_signs' show.id %}{{show.slug}}_room_signs.pdf">room_signs.pdf</a></td></tr>
-<tr><td><a href="{% url pdfs 'title_slides' show.id %}">title slides</a></td></tr>
-<tr><td><a href="{% url meet_ann show.id %}">meeting announcement</a></td></tr>
-<tr><td><a href="{{show.schedule_url}}">{{show.schedule_url}}</a></td></tr>
-<tr><td><a href="{% url show_stats show.id %}" title="{{show.name}}">show stats</a></td></tr>
-<tr><td><a href="{% url show_anomalies show.id %}" title="{{show.name}}">show anomalies</a></td></tr>
-<tr><td><a href="{% url eps_xfer client.slug show.slug %}">{{show.slug}}.json</a></td></tr>
+ <tr>{% include "show_shortcuts.html" %}</tr>
+ <tr>
+<td> <a href="{% url admin:main_client_change client.id %}">client admin</a> </td>
+<td> <a href="{% url admin:main_show_change show.id %}">show admin</a> </td>
+<td> <a href="{% url admin:main_episode_changelist %}?{{admin_params}}">episodes admin</a> </td>
+<td> <a href="{% url  public_play_list %}?{{request.META.QUERY_STRING}}">play_list</a> </td>
+<td>  </td>
 
-<tr><td>
-<a href="{% url  public_play_list %}?{{request.META.QUERY_STRING}}">play_list</a>
-</td></tr>
-
-<tr><td>
-        <a href="{% url public_play_list %}?client={{client.slug}}&show={{show.slug}}&location={{location_slug}}">pubs</a>
-</td></tr>
-
-<tr><td><a href="{% url admin:main_show_change show.id %}">show admin</a></td></tr>
-<tr><td><a href="{% url admin:main_episode_changelist %}?{{admin_params}}">episodes admin</a></td></tr>
-<tr><td><a href="{% url admin:main_client_change client.id %}">client admin</a></td></tr>
-
-
+</tr>
 </table>
+
 <hr />
 Episode Count: {{episodes.count}}
   <table>
