--- a/dj/main/templates/show_anomalies.html
+++ b/dj/main/templates/show_anomalies.html
@@ -9,14 +9,19 @@
 </p>
 
 <table class="shortcuts">
-<tr><td><a href="{% url overlaping_episodes show.id %}">overlaping_episodes</a></td></tr>
-<tr><td><a href="{% url overlaping_files show.id %}">overlaping_fles</a></td></tr>
-<tr><td><a href="{% url orphan_dv show.id %}">orphan_dv</a></td></tr>
-<tr><td><a href="{% url pdfs 'talk_signs' show.id %}{{show.slug}}_room_signs.pdf">room_signs.pdf</a></td></tr>
-<tr><td><a href="{{show.schedule_url}}">{{show.schedule_url}}</a></td></tr>
+<tr>
+    <td><a href="{% url overlaping_episodes show.id %}">overlaping_episodes</a></td>
+<td><a href="{% url overlaping_files show.id %}">overlaping_fles</a></td>
+<td><a href="{% url orphan_dv show.id %}">orphan_dv</a></td>
+</tr>
+<tr>
+<td><a href="{% url pdfs 'talk_signs' show.id %}{{show.slug}}_room_signs.pdf">room_signs.pdf</a></td>
+<td><a href="{{show.schedule_url}}">{{show.schedule_url}}</a></td></tr>
 <td><a href="{% url pdfs 'release_agreements' show.id %}{{show.slug}}_release.pdf">release.pdf</a></td>
-<tr><td><a href="{% url eps_xfer client.slug show.slug %}">{{show.slug}}.json</a></td></tr>
-<tr><td><a href="{% url meet_ann show.id %}">meeting announcement</a></td></tr>
+<td><a href="{% url eps_xfer client.slug show.slug %}">{{show.slug}}.json</a></td>
+<td><a href="{% url meet_ann show.id %}">meeting announcement</a></td>
+</tr>
+<tr>{% include "show_shortcuts.html" %}</tr>
 
 </table>
 
