Implement https://joeyh.name/rfc/rel-vcs/

--- a/dj/main/templates/base.html
+++ b/dj/main/templates/base.html
@@ -13,6 +13,9 @@
 <script type="text/javascript" src="{{STATIC_URL}}js/login_form.js"></script>
 <script type="text/javascript" src="{{STATIC_URL}}js/fnitize.js"></script>
 
+<link rel="vcs-git" href="https://github.com/CarlFK/veyepar.git" title="Veyepar git repository" />
+<link rel="vcs-git" href="git@github.com:CarlFK/veyepar.git" title="Veyepar git repository" />
+
 {% block head %}<title>Veyepar: Video eyeball produce and review.</title>{% endblock %}
 
 <link rel="stylesheet" type="text/css" href="{{STATIC_URL}}admin/css/base.css">
