Fix spelling mistakes.

--- a/dj/main/templates/approve/base.html
+++ b/dj/main/templates/approve/base.html
@@ -8,7 +8,7 @@
 <table>
 <tbody>
 <tr><td>Name</td><td><b>{{episode.name}}</b></td></tr>
-<tr><td>Presnter(s)</td><td>{{episode.authors}} </td></tr>
+<tr><td>Presenter(s)</td><td>{{episode.authors}} </td></tr>
 <tr><td>Location</td><td>{{episode.location}} </td></tr>
 <tr><td>Date</td><td>{{episode.start|date:"b D d"}}</td></tr>
 </tbody>
