--- a/dj/main/templates/main.html
+++ b/dj/main/templates/main.html
@@ -6,11 +6,11 @@
 <tr class=row0><td> <a href="TEST1">{{request.path}}</a> </td></tr>
 TEST1{{request.path}}
 {% block content %}
+
 <table class=tpick>
-<tr class=row1><td> <a href="{% url clients %}">Clients</a> </td></tr>
-</table>
-<table class=tpick>
-<tr class=row1><td> <a href="{% url tests %}">Tests</a> </td></tr>
+<tr class=row1><td><a href="{% url start_here %}">Start Here</a></td></tr>
+<tr class=row1><td><a href="{% url clients %}">Clients</a></td></tr>
+<tr class=row1><td><a href="{% url tests %}">Tests</a></td></tr>
 </table>
 
 {% endblock %}
