--- a/dj/main/templates/episode.html
+++ b/dj/main/templates/episode.html
@@ -33,7 +33,7 @@
 <tr><td>Author(s)</td><td>{{episode.authors}} </td></tr>
 <tr><td>Location</td><td><a href="{% url admin:main_location_change location.id%}">{{episode.location}}</a></td><td>{{episode.location.channelcopy}}</td>
 </tr>
-<tr><td>Date</td><td><a href="{% url episode_list client_slug=client.slug show_slug=show.slug %}?client={{client.slug}}&amp;show={{show.slug}}&amp;location={{episode.location.slug}}&amp;date={{episode.start|date:"Y-m-d"}}">
+<tr><td>Date</td><td><a href="{% url episode_list client_slug=client.slug show_slug=show.slug %}?client={{client.slug}}&amp;show={{show.slug}}&amp;location_slug={{episode.location.slug}}&amp;date={{episode.start|date:"Y-m-d"}}">
             {{episode.start|date:"b D d"}}</a></td>
     <td> <a href="{% url rf_set episode.location.slug %}?start_date={{episode.start|date:"Y-m-d"}}">Days Raw Files</a> </td>
 </tr>
