--- a/dj/main/templates/show.html
+++ b/dj/main/templates/show.html
@@ -12,6 +12,7 @@
 <td> <a href="{% url admin:main_client_change client.id %}">client admin</a> </td>
 <td> <a href="{% url admin:main_show_change show.id %}">show admin</a> </td>
 <td> <a href="{% url admin:main_episode_changelist %}?{{admin_params}}">episodes admin</a> </td>
+<td> <a href="{% url admin:main_image_file_changelist %}?{{admin_params}}">image_file admin</a> </td>
 <td> <a href="{% url  public_play_list %}?{{request.META.QUERY_STRING}}">play_list</a> </td>
 <td>  </td>
 
